--- a/idris-chez.cabal
+++ b/idris-chez.cabal
@@ -22,7 +22,7 @@ Executable idris-codegen-chez
                 , transformers
                 , text
 
-  other-modules: IRTS.CodegenChez,
+  other-modules: Chez.Codegen,
                  Paths_idris_chez
 
   if os(windows)
