Implement tree-shaking

--- a/idris-chez.cabal
+++ b/idris-chez.cabal
@@ -30,7 +30,8 @@ Executable idris-codegen-chez
     Chez.Codegen,
     Chez.Compatibility,
     Chez.Operators,
-    Chez.Util
+    Chez.Optimization,
+    Chez.Util,
     Paths_idris_chez
 
   if os(windows)
