Revert "Implement tree-shaking"
This reverts commit 420ec89f06248d2c4ee38220c684a8c351a95105.

--- a/idris-chez.cabal
+++ b/idris-chez.cabal
@@ -30,8 +30,7 @@ Executable idris-codegen-chez
     Chez.Codegen,
     Chez.Compatibility,
     Chez.Operators,
-    Chez.Optimization,
-    Chez.Util,
+    Chez.Util
     Paths_idris_chez
 
   if os(windows)
